--- a/src/resources/main.css
+++ b/src/resources/main.css
@@ -1,6 +1,12 @@
 /* Precompiled to main.css */
 body {
-  font-family: "Verdana"; }
+  font-family: "Verdana";
+}
+
+.smp-form-and-grid {
+  display: grid;
+  grid-template-columns: auto auto;
+}
 
 table {
   border-spacing: 0;
@@ -8,20 +14,27 @@ table {
   border-left: 1px solid #a6d2a6;
   border-right: 1px solid #a6d2a6;
   border-bottom: 1px solid #a6d2a6;
-  margin-top: 10px; }
-  table tr th, table tr td {
-    border-bottom: 1px solid #a6d2a6;
-    padding: 10px; }
-  table tr th {
-    text-align: center; }
-  table tr td {
-    text-align: left; }
-  table tr:first-child {
-    background-color: #81bf81; }
-  table tr:nth-child(2n+3) {
-    background-color: #a6d2a6; }
-  table tr:last-child td {
-    border-bottom: none; }
+  margin-top: 10px;
+}
+table tr th, table tr td {
+  border-bottom: 1px solid #a6d2a6;
+  padding: 10px;
+}
+table tr th {
+  text-align: center;
+}
+table tr td {
+  text-align: left;
+}
+table tr:first-child {
+  background-color: #81bf81;
+}
+table tr:nth-child(2n+3) {
+  background-color: #a6d2a6;
+}
+table tr:last-child td {
+  border-bottom: none;
+}
 
 .btn {
   border: none;
@@ -30,17 +43,21 @@ table {
   width: 100px;
   border-radius: 3px;
   background: #4f7cf6;
-  color: #fff; }
+  color: #fff;
+}
 
 form {
   border: 1px solid #a6d2a6;
   padding: 10px;
   margin-top: 10px;
-  width: 260px; }
-  form label {
-    display: block; }
-  form .inputBox {
-    margin-top: 10px;
-    margin-bottom: 10px; }
+  height: 180px;
+}
+form label {
+  display: block;
+}
+form .inputBox {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 /*# sourceMappingURL=main.css.map */
