--- a/src/resources/_smp-ui.scss
+++ b/src/resources/_smp-ui.scss
@@ -2,6 +2,15 @@ body {
 	font-family: 'Verdana'
 }
 
+.smp-main {
+
+}
+
+.smp-form-and-grid {
+	display: grid;
+	grid-template-columns: auto auto;
+}
+
 table {
 	border-spacing: 0;
 	border-radius: 3px;
@@ -50,7 +59,7 @@ form {
 	border: 1px solid #a6d2a6; 
 	padding: 10px;
 	margin-top: 10px;
-	width: 260px;
+	height: 180px;
 	label {
 		display: block;
 	}
@@ -59,3 +68,4 @@ form {
 		margin-bottom: 10px;
 	}
 }
+
